--- a/TimeSheet-front/src/styles.css
+++ b/TimeSheet-front/src/styles.css
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+.page{
+    width: 360px;
+    padding: 0% 0 0;
+    margin: auto;
+  }
+
+  .ngform {
+    position: relative;
+    z-index: 1;
+    background: #f3f1f1;
+    max-width: 560px;
+    margin: 0 auto 20px;
+    margin-top: 10px;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  }
+
+  button {
+    background-color: rgba(241, 112, 26, 0.966);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  input, select{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+
+ 
+
