--- a/TimeSheet-front/src/app/component/user/login/login.component.html
+++ b/TimeSheet-front/src/app/component/user/login/login.component.html
@@ -1,32 +1,33 @@
 <div class="page">
 
-    
     <h2 class="mrg" style="color:grey">Welcome back</h2>
     <div class="form">
         
       <form class="ngform" #loginform = "ngForm">    
         
-        
         <img src="assets/images/logo.png" width="200" height="80" alt="">
-        
-           
+
+        <div class="c2">
             <input type="text" [(ngModel)]="user.username" placeholder="Enter username/email" name="username" required
             #username="ngModel" [class.is-invalid] = "username.invalid && username.touched">
             <div *ngIf="username.invalid && username.touched"> 
                 <small class="text-danger">Username is required field.</small>
             </div>
-        
+        </div>
         <br>
 
-        <input type="password" [(ngModel)]="user.password" placeholder="Enter password"  name="password" required #password="ngModel"
-        [class.is-invalid] = "password.invalid && password.touched">
-        <div *ngIf="password.invalid && password.touched"> 
-          <small class="text-danger">Password is required field.</small>
+        <div class="c2">
+          <input type="password" [(ngModel)]="user.password" placeholder="Enter password"  name="password" required #password="ngModel"
+          [class.is-invalid] = "password.invalid && password.touched">
+          <div *ngIf="password.invalid && password.touched"> 
+            <small class="text-danger">Password is required field.</small>
+          </div>
+
         </div>
 
         <br><br>
 
-        <button [disabled]="loginform.form.invalid" (click)="login()" class="button">Log In</button> <!--[disabled]="loginform.form.invalid"-->
+        <button [disabled]="loginform.form.invalid" (click)="login()" class="button">Log In</button>
         </form>
     </div>
   </div>
