--- a/TimeSheet-front/src/app/registration/registration.component.html
+++ b/TimeSheet-front/src/app/registration/registration.component.html
@@ -1,1 +1,60 @@
-<p>registration works!</p>
+<div class="pageRegistration">
+
+    <h2 class="mrg" style="color:grey">Register here</h2>
+    <div class="form">
+        
+      <form class="ngform"  #registrationform = "ngForm">    
+        
+        <img src="assets/images/logo.png" width="200" height="80" alt="">
+           
+        <div class="c1">
+            <input type="text" [(ngModel)]="user.name" placeholder="Enter name" name="name" required #name="ngModel"
+            [class.is-invalid] = "name.invalid && name.touched">
+            <div *ngIf="name.invalid && name.touched"> 
+                <small class="text-danger">Name is required field.</small>
+            </div>
+        </div>
+
+        <div class="c1" >
+            <input type="text" [(ngModel)]="user.surname" placeholder="Enter surname" name="surname" required  #surname="ngModel"
+            [class.is-invalid] = "surname.invalid && surname.touched">
+            <div *ngIf="surname.invalid && surname.touched"> 
+                <small class="text-danger">Username is required field.</small>
+            </div>
+        </div>
+
+        <div class="c1">
+            <input type="text" [(ngModel)]="user.username" placeholder="Enter username" name="username" required  #username="ngModel"
+            [class.is-invalid] = "username.invalid && username.touched">
+            <div *ngIf="username.invalid && username.touched"> 
+                <small class="text-danger">Username is required field.</small>
+            </div>
+        </div>
+
+        <div class="c1">
+            <input type="email" [(ngModel)]="user.email" placeholder="Enter email" name="email" pattern = "^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" required #email="ngModel"
+            [class.is-invalid] = "email.invalid && email.touched">
+            <div *ngIf="email.invalid && email.touched">
+                <small class="text-danger">Email is required field.</small>
+           <!--]     <small class="text-danger" *ngIf = "email.errors.(pattern)">Enter valid email.</small>-->
+            </div>
+        </div>
+
+        <div class="c1">
+            <input type="password" [(ngModel)]="user.password" placeholder="Enter password" name="password" required #password="ngModel"
+            [class.is-invalid] = "password.invalid && password.touched">
+            <div *ngIf="password.invalid && password.touched">
+                <small class="text-danger">Password is required field.</small>
+            </div>
+        </div>
+
+        <br>
+
+        
+
+        <button class="button" [disabled]="registrationform.form.invalid" (click)="registration()">Register</button>
+    </form>
+    </div>
+  </div>
+  
+  
