--- a/TimeSheet-front/src/app/component/change-password/change-password.component.html
+++ b/TimeSheet-front/src/app/component/change-password/change-password.component.html
@@ -3,11 +3,11 @@
           <form class="ngform" #passwordform = "ngForm">
             <h3 style="color:grey">Change password</h3>
             <div>
-              <input type="password" [(ngModel)]="returnedUser.password" placeholder="Enter new password" name="password" required #password="ngModel"
-              [class.is-invalid] = "password.invalid && password.touched" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
-              <div *ngIf="password.errors && (password.invalid && password.touched)">
+              <input type="password" [(ngModel)]="returnedUser.newPassword" placeholder="Enter new password" name="newPassword" required #newPassword="ngModel"
+              [class.is-invalid] = "newPassword.invalid && newPassword.touched" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+              <div *ngIf="newPassword.errors && (newPassword.invalid && newPassword.touched)">
                 <small class="text-danger">Password is required field.</small>
-                <small class="text-danger" *ngIf = "password.errors">Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters</small>
+                <small class="text-danger" *ngIf = "newPassword.errors">Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters</small>
               </div>
             </div>
              <br>
@@ -21,7 +21,7 @@
             </div>
             <br>
             
-            <button [disabled]="passwordform.form.invalid" (click)="savePassword()" class="button">Save</button>
+            <button [disabled]="passwordform.form.invalid" (click)="savePassword()" class="btn btn-info" style="background-color: rgba(241, 112, 26, 0.966)">Save</button>
             </form>
         </div>
 </div>
