--- a/TimeSheet-front/src/app/navbar/navbar.component.html
+++ b/TimeSheet-front/src/app/navbar/navbar.component.html
@@ -7,10 +7,10 @@
 
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="'/home'" routerLinkActive="active">Home</a>
+                <a *ngIf="userService.isUserLogin()" class="nav-link" [routerLink]="'/home'" routerLinkActive="active">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="'/change-password'" routerLinkActive="active">Change password</a>
+                <a *ngIf="userService.isUserLogin()" class="nav-link" [routerLink]="'/change-password'" routerLinkActive="active">Change password</a>
             </li>
         </ul>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
