forgot password - added front and updated back

--- a/TimeSheet-front/src/app/component/change-password/change-password.component.html
+++ b/TimeSheet-front/src/app/component/change-password/change-password.component.html
@@ -4,22 +4,22 @@
             <h3 style="color:grey">Change password</h3>
             <div>
               <input type="password" [(ngModel)]="returnedUser.newPassword" placeholder="Enter new password" name="newPassword" required #newPassword="ngModel"
-              [class.is-invalid] = "newPassword.invalid && newPassword.touched" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+              [class.is-invalid] = "newPassword.invalid && newPassword.touched">
               <div *ngIf="newPassword.errors && (newPassword.invalid && newPassword.touched)">
                 <small class="text-danger">Password is required field.</small>
-                <small class="text-danger" *ngIf = "newPassword.errors">Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters</small>
               </div>
             </div>
              <br>
             <div>
               <input type="password" [(ngModel)]="returnedUser.confirmPassword" placeholder="Confirm password" name="confirmPassword" required #confirmPassword="ngModel"
-              [class.is-invalid] = "confirmPassword.invalid && confirmPassword.touched" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+              [class.is-invalid] = "confirmPassword.invalid && confirmPassword.touched">
               <div *ngIf="confirmPassword.errors && (confirmPassword.invalid && confirmPassword.touched)">
                   <small class="text-danger">Password is required field.</small>
-                  <small class="text-danger" *ngIf = "confirmPassword.errors">Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters</small>
-              </div>
+                 </div>
             </div>
             <br>
+            
+          
             
             <button [disabled]="passwordform.form.invalid" (click)="savePassword()" class="btn btn-info" style="background-color: rgba(241, 112, 26, 0.966)">Save</button>
             </form>
