--- a/TimeSheet-front/src/app/registration/registration.component.html
+++ b/TimeSheet-front/src/app/registration/registration.component.html
@@ -50,7 +50,9 @@
 
         <br>
         
-        <button class="button" [disabled]="registrationform.form.invalid" (click)="registration()">Register</button>
+        <button class="button" [disabled]="registrationform.form.invalid" (click)="registration()">Register</button> <br> <br>
+         
+        <span>Already have account? <a href="/login">Log in</a></span>
     </form>
     </div>
   </div>
