--- a/TimeSheet-front/src/app/navbar/navbar.component.html
+++ b/TimeSheet-front/src/app/navbar/navbar.component.html
@@ -12,6 +12,9 @@
             <li class="nav-item">
                 <a *ngIf="userService.isUserLogin()" class="nav-link" [routerLink]="'/change-password'" routerLinkActive="active">Change password</a>
             </li>
+            <li class="nav-item" hidden>
+                <a *ngIf="!userService.isUserLogin()" class="nav-link" [routerLink]="'/create-new-password'" routerLinkActive="active">Create new password</a>
+            </li>
         </ul>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             
