security questions for forgot password - added back, front needs update

--- a/TimeSheet-front/src/app/component/forgot-password/forgot-password.component.html
+++ b/TimeSheet-front/src/app/component/forgot-password/forgot-password.component.html
@@ -13,6 +13,16 @@
                 <small class="text-danger">Email is required field.</small>
             </div>
         </div>
+        <br>
+        <div class="c2">
+          <label for="securityAnswer">{{question}}</label>
+          <input type="text" name="securityAnswer" [(ngModel)]="returnedUser.securityAnswer" placeholder="Enter answer"  required
+          #securityAnswer="ngModel" [class.is-invalid] = "securityAnswer.invalid && securityAnswer.touched">
+          <div *ngIf="securityAnswer.invalid && securityAnswer.touched"> 
+              <small class="text-danger">Answer is required field.</small>
+          </div>
+      </div>
+
 
         <br>
 
